<?xml version="1.0" encoding="utf-8"?>

<!-- 글쓰기 페이지 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8F9FB"
    android:padding="16dp">

    <TextView
        android:id="@+id/post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#2A3D45"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/post_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_input_title"
        android:fontFamily="@font/bmjua"
        android:padding="12dp"
        android:background="@android:color/white"
        android:textColor="#2A3D45"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/post_input_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_input_contentn"
        android:fontFamily="@font/bmjua"
        android:padding="12dp"
        android:background="@android:color/white"
        android:textColor="#2A3D45"
        android:minHeight="150dp"
        android:gravity="top"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/add_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo_button"
        android:fontFamily="@font/bmjua"
        android:backgroundTint="#D0F4DE"
        android:textColor="#2A3D45"
        android:padding="12dp"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/post_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_submit_button"
        android:fontFamily="@font/bmjua"
        android:backgroundTint="#FDFFB6"
        android:textColor="#2A3D45"
        android:padding="12dp" />
</LinearLayout>
