<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F4F4F4"
    android:gravity="center_vertical">


        <LinearLayout
            android:id="@+id/groupgoal_goal_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">

            <!-- 그룹 목표 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/group_crown_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_heart"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/group_crown_button"
                    android:tint="#2A3D45"
                    android:scaleType="center"
                    android:padding="12dp" />

                <Button
                    android:id="@+id/group_goal_button_1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/group_goal_button_1"
                    android:fontFamily="@font/bmjua"
                    android:textColor="#2A3D45"
                    android:backgroundTint="#D0F4DE"
                    android:gravity="start|center_vertical"
                    android:paddingStart="16dp"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/delete_group_goals_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_delete"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/delete_group_goals_button"
                    android:tint="#2A3D45"
                    android:scaleType="center"
                    android:padding="12dp" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

